--- a/love/love.html
+++ b/love/love.html
@@ -21,10 +21,13 @@
             <div class="boxSlider">
                     <div class="listSlider">
                         <div class="slider">
-                            <img src="../image/love1.jfif" alt="">
+                            <img src="../image/uyen1.jpg" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love2.png" alt="">
+                            <img src="../image/uyen2.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/uyen3.jpg" alt="">
                         </div>
                     </div>
                 <div class="left">
