--- a/love/love.html
+++ b/love/love.html
@@ -174,7 +174,7 @@
     }
 
     const inputField = document.getElementById('inputField');
-    const textToType = "Nguyễn Bảo Uyên (Uyenee.hee)"; // thay đổi tên người yêu của bạn
+    const textToType = "Nguyễn Bảo Uyên (Uyeneehee)"; // thay đổi tên người yêu của bạn
     const typingSpeed = 100; // milliseconds per character
 
     let charIndex = 0;
@@ -247,7 +247,7 @@
     let indexTextContent = 0;
     let textLetterContent = document.querySelector('.contentLetter');
     // thay đổi lời chúc
-    const textLetterP = "Chúc em ngày 20/10 thật nhiểu sức khỏe, lúc nào cũng vui vẻ hạnh phúc. Sắp tới sẽ còn ";
+    const textLetterP = "Chúc em ngày 20/10 thật vui vẻ, hạnh phúc và lúc nào cũng nở nụ cười trên môi nhé!!! Và hãy để anh là người giữ nụ cười đó luôn nở trên môi của em nhaaa 💗💗💗";
     let timoutTextLetterContent;
     function textCharLetterContent(){
         if (indexTextContent < textLetterP.length) {
